frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: webstore-frontend
spec:
  replicas: 1 # Start with one instance
  selector:
    matchLabels:
      app: webstore-frontend
  template:
    metadata:
      labels:
        app: webstore-frontend
    spec:
      imagePullSecrets:
      - name: ghcr-creds
      containers:
      - name: frontend
        image: ghcr.io/poloturiot/simple_store/app:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m" # 50 millicores (0.05 CPU)
          limits:
            memory: "128Mi"
            cpu: "100m" # 100 millicores (0.1 CPU)
